# anagtosuram-bot

./: .gitignore  Makefile  README.md  pyproject.toml  samconfig.toml  template.yaml
apps/: pyproject.toml
apps/functions/shuffle/: function.py
libs/anagtosuram/: pyproject.toml
libs/anagtosuram-cdk/: app.py  pyproject.toml
libs/anagtosuram-cdk/stacks/: app.py
libs/anagtosuram/src/anagtosuram/: config.py
libs/anagtosuram/src/anagtosuram/bot/: __init__.py  bot.py
libs/anagtosuram/src/anagtosuram/utils/: discord.py
src/: requirements.txt
src/anagtosuram_bot/common/: discord.py
src/anagtosuram_bot/common/aws/: ssm.py
src/anagtosuram_bot/function/: main.py
