[project]
name = "anagtosuram-bot"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.36.11",
    "requests>=2.32.3",
]

[tool.hatch.build.targets.wheel]
packages = ["src", "src/anagtosuram_bot"]

[tool.taskipy.tasks]
build = "uv pip compile pyproject.toml > src/requirements.txt && sam build"
deploy = "sam deploy"
