[project]
name = "anagtosuram-bot-workspace"
version = "1.0.0"
readme = "README.md"
requires-python = ">=3.14"

[dependency-groups]
dev = [
    "ruff>=0.15.20",
    "ty>=0.0.55",
]

[tool.uv.sources]
anagtosuram = { workspace = true }

[tool.uv.workspace]
members = [
    "apps",
    "libs/anagtosuram",
    "libs/anagtosuram-cdk",
]

[tool.ruff.lint]
unfixable = [
    "F401", # unused import
    "F841", # unused variable
]
